<add> 개인정보수정

--- a/GimalProject/app/src/main/res/layout/activity_prime.xml
+++ b/GimalProject/app/src/main/res/layout/activity_prime.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/prime_text_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -32,7 +32,7 @@
         <TabHost
             android:id="@+id/tabhost"
             android:layout_width="match_parent"
-            android:layout_height="500dp">
+            android:layout_height="422dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -81,8 +81,8 @@
         <Button
             android:id="@+id/prime_btn_yourself"
             android:layout_width="200dp"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="자가진단문진표 작성" />
 
     </LinearLayout>
