--- a/GimalProject/app/src/main/res/layout/activity_mypage.xml
+++ b/GimalProject/app/src/main/res/layout/activity_mypage.xml
@@ -91,14 +91,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <TextView
-        android:id="@+id/mypage_text_pwd"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/mypage_et_pwd"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="240dp"
-        android:text="TextView"
+        android:inputType="textPassword"
+        android:focusableInTouchMode="false"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -111,7 +112,7 @@
         android:layout_marginTop="24dp"
         android:text="비밀번호 수정"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mypage_text_pwd" />
+        app:layout_constraintTop_toBottomOf="@+id/mypage_et_pwd" />
 
     <Button
         android:id="@+id/mypage_btn_save"
@@ -134,4 +135,13 @@
         android:text="뒤로 가기"
         app:layout_constraintStart_toEndOf="@+id/mypage_btn_save"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword"
+        tools:layout_editor_absoluteX="12dp"
+        tools:layout_editor_absoluteY="553dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
