<add> 캘린더뷰 선택, 예약 내용 취소

--- a/GimalProject/app/src/main/res/layout/activity_prime.xml
+++ b/GimalProject/app/src/main/res/layout/activity_prime.xml
@@ -65,12 +65,16 @@
                         android:id="@+id/tab2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:baselineAligned="true"
                         android:orientation="vertical">
+                        <LinearLayout
+                            android:id="@+id/tab22"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:baselineAligned="true"
+                            android:orientation="vertical">
+                        </LinearLayout>
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="아싸라비야"></TextView>
                     </LinearLayout>
                 </FrameLayout>
 
